mpdscribble 0.25 - not yet released
  * fall back to "album artist" tag if there is no "artist" tag
  * fix out-of-bounds read
  * require CURL 7.55.0 or later

mpdscribble 0.24 - (2022-03-14)
  * limit retry interval to 8 minutes
  * fix crash if $XDG_CACHE_HOME is not set
  * switch default handshake URL to https://

mpdscribble 0.23 - (2020-09-03)
  * notify systemd about start-up completion
  * add a systemd service file
  * log to journal by default if systemd is used
  * remove libsoup support
  * require MPD 0.16
  * require libmpdclient 2.5
  * drop GLib dependency
  * build with Meson/ninja instead of autotools


mpdscribble 0.22 - 2011-07-09
  * curl: fix segmentation fault with large response body
  * curl: fix operation with threaded resolver
  * receive track ratings over the MPD client-to-client protocol


mpdscribble 0.21 - 2011-01-03
  * require libmpdclient 2.2
  * better HTTP error messages
  * curl: check the HTTP response status
  * file: ignore trailing whitespace
  * lmc: show real server address in verbose log message


mpdscribble 0.20 - 2010-09-22
  * curl: implement libCURL timeouts
  * curl: prevent recursive read calls
  * log: use ISO8601 date format
  * journal: don't save "(null)" values
  * scrobbler: submit track numbers
  * scrobbler: support logging to a file
  * scrobbler: fix memory leak in as_songchange()


mpdscribble 0.19 - 2009-12-26
  * using libmpdclient 2.0 instead of built-in libmpdclient


mpdscribble 0.18.1 - 2009-08-29
  * soup: explicitly link with libgthread
  * curl: use curl_escape() on GLib < 2.16
  * journal: don't warn if journal file is missing
  * use g_strerror() instead of strerror()


mpdscribble 0.18 - 2009-07-08
  * improved detection of repeated songs
  * support MPD's new MusicBrainz tags
  * CURL can be used instead of libsoup at compile time
  * removed the command line options --cache, --cache-interval, --sleep
  * support multiple scrobbler services (such as libre.fm)