@@ -1,5 +1,6 @@
 mpdscribble 0.25 - not yet released
   * fall back to "album artist" tag if there is no "artist" tag
+  * improved XDG base directory support
   * fix out-of-bounds read
   * require CURL 7.55.0 or later
 
